--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.15.0",
     "redux-persist": "^6.0.0",
-    "vite-plugin-svgr": "^3.2.0"
+    "vite-plugin-svgr": "^3.2.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@swc/cli": "^0.1.62",
