--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@faker-js/faker": "^8.4.1",
     "@reduxjs/toolkit": "^2.2.3",
     "@vitejs/plugin-react-swc": "^3.3.2",
     "firebase": "^10.10.0",
@@ -24,6 +25,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.15.0",
+    "react-toastify": "^10.0.5",
     "redux-persist": "^6.0.0",
     "vite-plugin-svgr": "^3.2.0",
     "yup": "^1.4.0"
